--- a/HTML & CSS Fundamentals/week1/Building HTML Forms/Index.html
+++ b/HTML & CSS Fundamentals/week1/Building HTML Forms/Index.html
@@ -3,79 +3,151 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Add User Form</title>
+    <title>Add User - Futuristic Form</title>
     <style>
+      /* General Styles */
       body {
         display: flex;
         justify-content: center;
         align-items: center;
         min-height: 100vh;
         margin: 0;
-        font-family: Arial, sans-serif;
-        background-color: #f0f0f0;
+        font-family: "Orbitron", sans-serif;
+        background: linear-gradient(135deg, #1a1a1a, #0d0d0d);
+        color: #fff;
       }
 
+      /* Form Container */
       form {
         width: 90%;
         max-width: 500px;
-        padding: 20px;
-        border: 1px solid #ccc;
-        border-radius: 10px;
-        background-color: #f9f9f9;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 2rem;
+        background: rgba(255, 255, 255, 0.1);
+        border-radius: 15px;
+        backdrop-filter: blur(10px);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
       }
 
+      /* Fieldset and Legend */
       fieldset {
-        border: 2px solid #ccc;
-        padding: 20px;
+        border: 2px solid rgba(255, 255, 255, 0.2);
+        border-radius: 10px;
+        padding: 1.5rem;
       }
 
       legend {
+        font-size: 1.5rem;
         font-weight: bold;
-        padding: 0 10px;
+        color: #00ffcc;
+        text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
       }
 
+      /* Labels */
       label {
         display: block;
-        margin-bottom: 5px;
+        margin-bottom: 0.5rem;
+        font-size: 1rem;
+        color: #00ffcc;
       }
 
+      /* Input Fields */
       input[type="text"],
       input[type="email"],
       select,
       textarea,
       input[type="date"] {
         width: 100%;
-        padding: 8px;
-        border: 1px solid #ccc;
+        padding: 0.8rem;
+        margin-bottom: 1rem;
+        border: 1px solid rgba(255, 255, 255, 0.2);
         border-radius: 5px;
-        margin-bottom: 10px;
+        background: rgba(255, 255, 255, 0.1);
+        color: #fff;
+        font-family: "Orbitron", sans-serif;
+        transition: border-color 0.3s, box-shadow 0.3s;
       }
 
+      input[type="text"]:focus,
+      input[type="email"]:focus,
+      select:focus,
+      textarea:focus,
+      input[type="date"]:focus {
+        border-color: #00ffcc;
+        box-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc;
+        outline: none;
+      }
+
+      /* Radio Buttons and Checkboxes */
       input[type="radio"],
       input[type="checkbox"] {
-        margin-right: 10px;
+        margin-right: 0.5rem;
+        accent-color: #00ffcc;
       }
 
+      /* Textarea */
       textarea {
         resize: vertical;
         height: 100px;
       }
 
+      /* Submit Button */
       button {
         width: 100%;
-        padding: 10px 20px;
-        background-color: #4caf50;
-        color: white;
+        padding: 1rem;
+        background: linear-gradient(135deg, #00ffcc, #00b3ff);
         border: none;
         border-radius: 5px;
+        color: #1a1a1a;
+        font-size: 1rem;
+        font-weight: bold;
         cursor: pointer;
+        transition: transform 0.3s, box-shadow 0.3s;
       }
 
       button:hover {
-        background-color: #45a049;
+        transform: scale(1.05);
+        box-shadow: 0 0 15px #00ffcc, 0 0 30px #00ffcc;
+      }
+
+      /* Neon Glow Effect */
+      @keyframes glow {
+        0% {
+          text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #00ffcc;
+        }
+        50% {
+          text-shadow: 0 0 20px #00ffcc, 0 0 40px #00ffcc, 0 0 60px #00ffcc;
+        }
+        100% {
+          text-shadow: 0 0 10px #00ffcc, 0 0 20px #00ffcc, 0 0 30px #00ffcc;
+        }
+      }
+
+      /* Add Glow to Legend */
+      legend {
+        animation: glow 2s infinite;
+      }
+
+      /* Responsive Design */
+      @media (max-width: 600px) {
+        form {
+          padding: 1rem;
+        }
+
+        fieldset {
+          padding: 1rem;
+        }
+
+        legend {
+          font-size: 1.2rem;
+        }
       }
     </style>
+    <!-- Google Fonts: Orbitron (Futuristic Font) -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <form action="/submit" method="POST">
