--- a/HTML & CSS Fundamentals/Week2/Box_Model/pyramid/index.html
+++ b/HTML & CSS Fundamentals/Week2/Box_Model/pyramid/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
 
-    <title>Document</title>
+    <title>pyramid</title>
   </head>
   <body>
     <div class="one">1</div>
